--- a/vignettes/IsotopeDetectionVignette.Rnw
+++ b/vignettes/IsotopeDetectionVignette.Rnw
@@ -51,8 +51,8 @@ Fourth, we detect isotope clusters in each pseudospectrum using the proposed iso
   library("CAMERA")
   
   ## raw data file
-  mzdatapath <- file.path(find.package("msdata"), "microtofq")
-  file <- list.files(path = mzdatapath, pattern = "^.*\\.mzdata$",
+  mzmlpath <- file.path(find.package("msdata"), "microtofq")
+  file <- list.files(path = mzmlpath, pattern = "^.*\\.mzML$",
                      all.files = TRUE, full.names = TRUE, 
 		     recursive = FALSE, ignore.case = FALSE, 
 		     include.dirs = FALSE, no.. = TRUE)[[1]]
